Evento input para el primer input

--- a/conversor/index.html
+++ b/conversor/index.html
@@ -16,7 +16,7 @@
             <label for="radioF">Fahrenheit</label>
             <input type="radio" id="radioF" name="medida" value="Fahrenheit">
 
-            <input type="number" class="grados" placeholder="Ingrese grados">
+            <input type="number" id="inputUsuario" class="grados" placeholder="Ingrese grados">
         </div>
         <div class="box box2">
             <p class="resultado resultadoCelsius">Resultado en grados Celsius</p>
