--- a/conversor/index.html
+++ b/conversor/index.html
@@ -21,7 +21,7 @@
         <div class="box box2">
             <p class="resultado resultadoCelsius">Resultado en grados Celsius</p>
             <p class="resultado resultadoFahrenheit">Resultado en grados Fahrenheit</p>
-            <input type="text" class="grados" placeholder="Resultado">
+            <input type="text" class="grados" placeholder="Resultado" id="equivalente">
         </div>
 
     </div>
