--- a/conversor/index.html
+++ b/conversor/index.html
@@ -19,8 +19,8 @@
             <input type="number" id="inputUsuario" class="grados" placeholder="Ingrese grados">
         </div>
         <div class="box box2">
-            <p class="resultado resultadoCelsius">Resultado en grados Celsius</p>
-            <p class="resultado resultadoFahrenheit">Resultado en grados Fahrenheit</p>
+            <p class="texto" id="pCelsius">Resultado en grados Celsius</p>
+            <p class="texto" id="pFahrenheit">Resultado en grados Fahrenheit</p>
             <input type="text" class="grados" placeholder="Resultado" id="equivalente">
         </div>
 
