Se agregan intentos

--- a/adivinarNumero/index.html
+++ b/adivinarNumero/index.html
@@ -10,7 +10,7 @@
     <h1>Adivina el número</h1>
     <div class="contenedor">
         <input type="number" placeholder="Número entre 1 y 100" name="numUsuario" id="numUsuario" class="input">
-        <button id="verificarNumero" class="btnConfirmar" onclick="confirmarNumero()">Confirmar</button>
+        <button id="verificarNumero" class="btnConfirmar">Confirmar</button>
         <p class="respuesta" id="respuesta">?</p>
     </div>
 
