se modifican estilos en span

--- a/to-do/index.html
+++ b/to-do/index.html
@@ -11,13 +11,14 @@
     <div class="contenedor">
         <input type="text" name="nuevaTarea" id="nuevaTarea" class="nuevaTarea" placeholder="Ingresar una tarea">
         <ul class="listaTareas" id="lista">
-            <li class="elementoLista">Comprar pan</li>
-            <hr class="elementoLinea">
+            <li class="elementoLista">
+                <div class="divTarea">
+                    <span class="circulo" id="circulo"></span>
+                    <span class="txtTarea">Comprar pan</span> 
+                </div>
+                <hr class="elementoLinea">
+            </li>
         </ul>
-        
-    </div>
-    <div class="contenedorLista">
-
     </div>
  
 
