--- a/to-do/index.html
+++ b/to-do/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>To-do List</title>
 </head>
 <body>
@@ -13,9 +14,17 @@
         <ul class="listaTareas" id="lista">
             <li class="elementoLista">
                 <div class="divTarea">
-                    <span class="circulo" id="circulo"></span>
-                    <span class="txtTarea">Comprar pan</span> 
+
+                    <div class="divtexto">
+                        <span class="circulo" id="circulo"></span>
+                        <span class="txtTarea">Comprar pan</span>
+                    </div>
+                    <div class="iconos">
+                        <i class="fa-solid fa-trash-can"></i>  <!-- Eliminar -->
+                        <i class="fa-solid fa-pencil"></i> <!-- Editar -->
+                    </div>
                 </div>
+
                 <hr class="elementoLinea">
             </li>
         </ul>
