Funcion del icono eliminar

--- a/to-do/index.html
+++ b/to-do/index.html
@@ -12,7 +12,7 @@
     <div class="contenedor">
         <input type="text" name="nuevaTarea" id="nuevaTarea" class="nuevaTarea" placeholder="Ingresar una tarea">
         <ul class="listaTareas" id="lista">
-            <li class="elementoLista">
+            <li class="elementoLista" id="tarea">
                 <div class="divTarea">
 
                     <div class="divtexto">
@@ -20,8 +20,8 @@
                         <span class="txtTarea">Comprar pan</span>
                     </div>
                     <div class="iconos">
-                        <i class="fa-solid fa-trash-can"></i>  <!-- Eliminar -->
-                        <i class="fa-solid fa-pencil"></i> <!-- Editar -->
+                        <i id="btnEliminar" class="fa-solid fa-trash-can"></i>  <!-- Eliminar -->
+                        <i id="btnEditar" class="fa-solid fa-pencil"></i> <!-- Editar -->
                     </div>
                 </div>
 
