funcionalidad para editar tareasn

--- a/to-do/index.html
+++ b/to-do/index.html
@@ -15,17 +15,15 @@
             <li class="elementoLista" id="tarea">
                 <div class="divTarea">
 
-                    <div class="divtexto">
-                        <span class="circulo" id="circulo"></span>
-                        <span class="txtTarea">Comprar pan</span>
-                    </div>
+                    <div class="divtexto"></div>
+
                     <div class="iconos">
                         <i id="btnEliminar" class="fa-solid fa-trash-can"></i>  <!-- Eliminar -->
                         <i id="btnEditar" class="fa-solid fa-pencil"></i> <!-- Editar -->
                     </div>
                 </div>
 
-                <hr class="elementoLinea">
+               
             </li>
         </ul>
     </div>
